// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigDao findAll async 1`] = `Array []`;

exports[`ConfigDao saveOrUpdateOneByTabNameFieldName async 1`] = `
Object {
  "fieldName": "fieldName",
  "id": 1,
  "tabName": "tabName",
  "value": "value",
}
`;

exports[`ConfigDao with preset saveOrUpdateOneByTabNameFieldName async update 1`] = `
Object {
  "fieldName": "fieldName",
  "id": 4,
  "tabName": "tabName",
  "value": "value2",
}
`;

exports[`ConfigDao with preset saveOrUpdateOneByTabNameFieldName async with preset 1`] = `
Object {
  "fieldName": "fieldName",
  "id": 4,
  "tabName": "tabName",
  "value": "value",
}
`;
